# pattern-slint-web-desktop

./: Cargo.toml  Makefile.toml  README.md  index.html
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/defs/: Cargo.toml
crates/defs/src/: lib.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/ui/ui/: appwindow.slint
crates/web/: Cargo.toml
crates/web/src/: main.rs
