[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
axum = "*"
backend = { path = "crates/backend" }
defs = { path = "crates/defs" }
frontend = { path = "crates/frontend" }
getrandom = { version = "*", features = ["js"] }
slint = "1"
slint-build = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
ui = { path = "crates/ui" }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"

