[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
getrandom.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
backend.workspace = true
tokio.workspace = true

[dependencies]
defs.workspace = true
