[package]
name = "ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
getrandom.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
slint.workspace = true

[build-dependencies]
slint-build.workspace = true
